--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "CCBPlusTree"
-version = "0.0.10"
+version = "0.0.11"
 edition = "2021"
 authors = ["Amir El-Shaikh <elshaikh@mathematik.uni-marburg.de>"]
 description = "Experimental Concurrency Control B+Tree with and without Version Lists Implementation"
@@ -10,7 +10,9 @@ repository = "https://github.com/umr-dbs/CC-BPlusTree"
 
 [dependencies]
 ChronicleDB = { git = "ssh://git@github.com/umr-dbs/ChronicleDB", version = "1.0.46" }
-MVCCBPlusTree = { git = "ssh://git@github.com/umr-dbs/MVCC-BPlusTree", version = "0.0.56" }
+MVCCBPlusTree = { git = "ssh://git@github.com/umr-dbs/MVCC-BPlusTree", version = "0.0.57" }
 chrono = "0.4.20"
 rand = "0.8.5"
 num_cpus = "1.13.1"
+#serde = { version ="1.0.14", features = ["derive", "rc"] }
+#serde_json = { version = "1.0.8" }
