--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "CCBPlusTree"
-version = "0.0.32"
+version = "0.0.33"
 edition = "2021"
 authors = ["Amir El-Shaikh <elshaikh@mathematik.uni-marburg.de>"]
-description = "Experimental Concurrency Control B+Tree with and without Version Lists Implementation"
+description = "Experimental Concurrency Control B+Tree single versioned and versioned via version lists Implementation"
 repository = "https://github.com/umr-dbs/CC-BPlusTree"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,8 +14,9 @@ MVCCBPlusTree = { git = "ssh://git@github.com/umr-dbs/MVCC-BPlusTree", version =
 chrono = "0.4.22"
 rand = "0.8.5"
 num_cpus = "1.13.1"
-libc = "0.2.133"
 itertools = "0.10.5"
 parking_lot = "0.12.1"
-#serde = { version ="1.0.14", features = ["derive", "rc"] }
-#serde_json = { version = "1.0.8" }
+serde = { version ="1.0.14", features = ["derive", "rc"] }
+serde_json = { version = "1.0.8" }
+[target.'cfg(target_os = "linux")'.dependencies]
+libc = "0.2.134"
