Added OLC unlimited

--- a/config.ini
+++ b/config.ini
@@ -24,7 +24,7 @@
 # {"RWLockCoupling":{"attempts":0,"max_optimistic_level":{"Const":8}}}
 # {"OptimisticLockCoupling":{"attempts":0,"max_optimistic_level":{"Height":1.0}}}
     
-    Locking Strategy            = {"RWLockCoupling":{"attempts":3,"max_optimistic_level":{"Height":1.0}}}
+    Locking Strategy            = {"MonoWriter"}
 
 [Block and Payload Settings]#
     # Absolute block alignment size in bytes
