--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "CCBPlusTree"
-version = "0.0.49"
+version = "0.0.50"
 edition = "2021"
 authors = ["Amir El-Shaikh <elshaikh@mathematik.uni-marburg.de>"]
 description = "Experimental Concurrency Control B+Tree single versioned and versioned via version lists Implementation"
@@ -9,7 +9,7 @@ repository = "https://github.com/umr-dbs/CC-BPlusTree"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-TXDataModel = { path = "../TXDataModel" }
+TXDataModel = { path = "../TXDataModel", version = "0.1.7" }
 chrono = "0.4.23"
 rand = "0.8.5"
 num_cpus = "1.15"
