Introduced the cpu threads flag, enabling yield calls if set to false. Refactored code.

--- a/config.ini
+++ b/config.ini
@@ -30,7 +30,7 @@
     # Absolute block alignment size in bytes
 	Block Size					= 4096
 
-    # Defines this index as supporting multi versioning or not
+    # Defines this tree as supporting multi versioning or not
     Multi version               = false
     
     # You must declare the layout in a valid json format.
