--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ chrono = "0.4.24"
 rand = "0.8.5"
 num_cpus = "1.15.0"
 itertools = "0.10.5"
-parking_lot = "0.12.1"
+parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
 serde = { version ="1.0.156", features = ["derive", "rc"] }
 serde_json = { version = "1.0.94" }
 [target.'cfg(target_os = "linux")'.dependencies]
