--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "CCBPlusTree"
-version = "0.0.73"
+version = "0.0.74"
 edition = "2021"
 authors = ["Amir El-Shaikh <elshaikh@mathematik.uni-marburg.de>"]
 description = "Experimental Concurrency Control CRUD B+Tree Implementation"
@@ -9,6 +9,12 @@ repository = "https://github.com/umr-dbs/CC-BPlusTree"
 [profile.dev]
 overflow-checks = false
 
+[profile.release]
+overflow-checks = false
+
+[features]
+hardware-lock-elision = []
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -16,7 +22,10 @@ chrono = "0.4.24"
 rand = "0.8.5"
 num_cpus = "1.15.0"
 itertools = "0.10.5"
+[target.'cfg(features = "hardware-lock-elision")'.dependencies]
 parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
+[target.'cfg(not(features = "hardware-lock-elision"))'.dependencies]
+parking_lot = "0.12.1"
 serde = { version ="1.0.158", features = ["derive", "rc"] }
 serde_json = { version = "1.0.94" }
 [target.'cfg(target_os = "linux")'.dependencies]
