Introduced contention tests as discussed with Bernhard, fixing unclear mixed workloads earlier. Now throughput is measured, rather than undefined summed time of both updaters and readers.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ hardware-lock-elision = []
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossbeam = "0.8.2"
 chrono = "0.4.24"
 rand = "0.8.5"
 num_cpus = "1.15.0"
