--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "CCBPlusTree"
-version = "0.0.102"
+version = "0.0.103"
 edition = "2021"
 authors = ["Amir El-Shaikh <elshaikh@mathematik.uni-marburg.de>"]
 description = "Experimental Concurrency Control CRUD B+Tree Implementation"
@@ -18,15 +18,16 @@ hardware-lock-elision = []
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hashbrown = "0.14.0"
 crossbeam = "0.8.2"
 chrono = "0.4.26"
 rand = "0.8.5"
 num_cpus = "1.16.0"
 itertools = "0.11"
 parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
-serde = { version ="1.0.179", features = ["derive", "rc"] }
-serde_json = { version = "1.0.104" }
+serde = { version ="1.0.186", features = ["derive", "rc"] }
+serde_json = { version = "1.0.105" }
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2.147"
-sysinfo = "0.29.7"
+sysinfo = "0.29.8"
 raw-cpuid = "11.0.1"
