--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "CCBPlusTree"
-version = "0.0.108"
+version = "0.0.109"
 edition = "2021"
 authors = ["Amir El-Shaikh <elshaikh@mathematik.uni-marburg.de>"]
 description = "Experimental Concurrency Control CRUD B+Tree Implementation"
 repository = "https://github.com/umr-dbs/CC-BPlusTree"
+
+[lib]
+name = "cc_bplustree"
+path = "src/lib.rs"
 
 [profile.dev]
 overflow-checks = false
@@ -18,16 +22,16 @@ hardware-lock-elision = []
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hashbrown = "0.14.2"
-crossbeam = "0.8.2"
-chrono = "0.4.31"
+hashbrown = "0.14.3"
+crossbeam = "0.8.4"
+chrono = "0.4.34"
 rand = "0.8.5"
 num_cpus = "1.16.0"
-itertools = "0.11"
+itertools = "0.12.1"
 parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
-serde = { version ="1.0.192", features = ["derive", "rc"] }
-serde_json = { version = "1.0.108" }
+serde = { version ="1.0.197", features = ["derive", "rc"] }
+serde_json = { version = "1.0.114" }
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2.150"
-sysinfo = "0.29.10"
+sysinfo = "0.30.5"
 raw-cpuid = "11.0.1"
