Added fairness for ORWC via features.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "CCBPlusTree"
-version = "0.0.116"
+version = "0.0.117"
 edition = "2021"
 authors = ["Amir El-Shaikh <elshaikh@mathematik.uni-marburg.de>"]
 description = "Experimental Concurrency Control CRUD B+Tree Implementation"
@@ -17,8 +17,8 @@ overflow-checks = false
 overflow-checks = false
 
 [features]
-hardware-lock-elision = []
-
+olc-hle = []
+orwc-fair = []
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -27,11 +27,11 @@ crossbeam = "0.8.4"
 chrono = "0.4.38"
 rand = "0.8.5"
 num_cpus = "1.16.0"
-itertools = "0.12.1"
+itertools = "0.13.0"
 parking_lot = { version = "0.12.2", features = ["hardware-lock-elision"] }
-serde = { version ="1.0.200", features = ["derive", "rc"] }
-serde_json = { version = "1.0.116" }
+serde = { version ="1.0.202", features = ["derive", "rc"] }
+serde_json = { version = "1.0.117" }
 [target.'cfg(target_os = "linux")'.dependencies]
-libc = "0.2.154"
+libc = "0.2.155"
 sysinfo = "0.30.12"
 raw-cpuid = "11.0.2"
