--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "CCBPlusTree"
-version = "0.0.117"
+version = "0.0.118"
 edition = "2021"
 authors = ["Amir El-Shaikh <elshaikh@mathematik.uni-marburg.de>"]
 description = "Experimental Concurrency Control CRUD B+Tree Implementation"
@@ -9,6 +9,7 @@ repository = "https://github.com/umr-dbs/CC-BPlusTree"
 [lib]
 name = "cc_bplustree"
 path = "src/lib.rs"
+crate-type = ["cdylib"]
 
 [profile.dev]
 overflow-checks = false
@@ -28,10 +29,10 @@ chrono = "0.4.38"
 rand = "0.8.5"
 num_cpus = "1.16.0"
 itertools = "0.13.0"
-parking_lot = { version = "0.12.2", features = ["hardware-lock-elision"] }
-serde = { version ="1.0.202", features = ["derive", "rc"] }
-serde_json = { version = "1.0.117" }
+parking_lot = { version = "0.12.3", features = ["hardware-lock-elision"] }
+serde = { version ="1.0.204", features = ["derive", "rc"] }
+serde_json = { version = "1.0.120" }
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2.155"
-sysinfo = "0.30.12"
-raw-cpuid = "11.0.2"
+sysinfo = "0.30.13"
+raw-cpuid = "11.1.0"
